Fixed files row height in Firefox/KDE
Firefox is using native checkboxes and in KDE the checkboxes have a
bigger height which caused the row height to increase and be misaligned
with the date column.

This fix makes the checkbox absolute to prevent it to influence the row
height.

--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -219,6 +219,11 @@ table td.filename form { font-size:14px; margin-left:48px; margin-right:48px; }
 	width: 50px;
 	z-index: 5;
 }
+#fileList tr td.filename>input[type="checkbox"]{
+	/* sometimes checkbox height is bigger (KDE/Qt), so setting to absolute
+	 * to prevent it to increase the height */
+	position: absolute;
+}
 #fileList tr td.filename>input[type="checkbox"] + label {
 	left: 0;
 }
